# trust-construction

./: .gitignore  ARCHITECTURE_PROOF.md  BADGE_10_COMPLETE.md  BADGE_12_COMPLETE.md  BADGE_13_COMPLETE.md  BADGE_14_COMPLETE.md  BADGE_15_COMPLETE.md  BADGE_16_COMPLETE.md  BADGE_17_COMPLETE.md  BADGE_18_COMPLETE.md  BADGE_26_EVENT_SOURCING.md  BADGE_27_PURE_IMPORT.md  BADGE_28_VALUE_STORE.md  BADGE_29_SCHEMA_REFINEMENT.md  BADGE_30_RULES_AS_DATA.md  BADGE_6_COMPLETE.md  BADGE_7_COMPLETE.md  BADGE_8_COMPLETE.md  BADGE_9_COMPLETE.md  Cargo.toml  EXPRESSION_PROBLEM_SOLVED.md  EXTENSIBILITY_COMPLETE.md  FACT_MODEL_ARCHITECTURE.md  README.md  RICH_HICKEY_REFACTOR_MASTER_PLAN.md  run.sh  test_apple.csv  test_bofa.csv  test_stripe.json  test_wise.csv  transactions.db
rules/: merchants.json
schemas/: attributes.cue  contexts.cue  transaction.cue
src/: attributes.rs  data_quality.rs  db.rs  deduplication.rs  lib.rs  main.rs  parser.rs  reconciliation.rs  rules.rs  schema.rs  temporal.rs  ui.rs
src/entities/: account.rs  bank.rs  category.rs  merchant.rs  mod.rs
web/: index.html  statement-detail.html  statements.html
