[package]
name = "trust-construction"
version = "0.1.0"
edition = "2021"

# Enable library for API server
[lib]
name = "trust_construction"
path = "src/lib.rs"

# Binary targets
[[bin]]
name = "trust-construction"
path = "src/main.rs"

[[bin]]
name = "trust-server"
path = "bin/server.rs"
required-features = ["server"]

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
csv = "1.3"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
uuid = { version = "1.6", features = ["v4", "serde"] }

# TUI dependencies (optional - for CLI mode)
ratatui = { version = "0.26", optional = true }
crossterm = { version = "0.27", optional = true }

# Web server dependencies (optional - for server mode)
axum = { version = "0.7", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["cors", "fs"], optional = true }
urlencoding = { version = "2.1", optional = true }

[features]
default = ["tui"]
tui = ["ratatui", "crossterm"]
server = ["axum", "tokio", "tower", "tower-http", "urlencoding"]
full = ["tui", "server"]
